bk_ida/gccida/c1/expand_mult_highpart
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3237:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3253:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3254:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3255:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3260:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v25; // rdx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3265:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v30; // rdx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3278:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3281:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3296:41: error: use of undeclared identifier 'machine_mode'
v13 = immed_double_const( cnst1, v12, ( machine_mode)v10); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3299:51: error: subscripted value is not an array, pointer, or vector
&& mul_cost[( unsigned int)v10] + *(int *)0x9374DC[v7] < max_cost ) 
                                          ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3301:26: error: use of undeclared identifier 'machine_mode'
v15 = convert_to_mode( ( machine_mode)v10, op0, unsignedp); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3302:22: error: use of undeclared identifier 'machine_mode'
v16 = expand_mult( ( machine_mode)v10, v15, v13, 0LL, 0); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3306:36: error: use of undeclared identifier 'machine_mode'
v20 = expand_shift( RSHIFT_EXPR, ( machine_mode)v10, v16, v17, 0LL, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3336:48: error: subscripted value is not an array, pointer, or vector
|| mul_highpart_cost[v6] + 2 * *(int *)0x9374DC[v14] + 4 * add_cost >= max_cost ) 
                                       ~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3377:23: error: use of undeclared identifier 'machine_mode'
v40 = expand_binop( ( machine_mode)v10, ( optab_0)v27, op0, v39, 0LL, unsignedp == 0, OPTAB_WIDEN); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3377:43: error: use of undeclared identifier 'optab_0'
v40 = expand_binop( ( machine_mode)v10, ( optab_0)v27, op0, v39, 0LL, unsignedp == 0, OPTAB_WIDEN); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3383:36: error: use of undeclared identifier 'machine_mode'
v44 = expand_shift( RSHIFT_EXPR, ( machine_mode)v10, v41, v43, 0LL, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3384:30: error: use of undeclared identifier 'machine_mode'
v45 = convert_modes( mode, ( machine_mode)v10, v44, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/expmed.c:3401:23: error: use of undeclared identifier 'machine_mode'
v36 = expand_binop( ( machine_mode)v10, v33, op0, v52, 0LL, v29, OPTAB_WIDEN); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult_highpart/src/obj/expmed.o] Error 1
